<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">screenGo.TV</string>

    <string name="second">S</string>
    <string name="separate"> / </string>
    <string name="init_time">00:00</string>

    <string name="load_image_fail">"image load fail"</string>
    <string name="parse_image_fail">"image parse fail"</string>

    <string name="toast_musicplay_fail">music play error</string>
    <string name="toast_videoplay_fail">video play error</string>
    <string name="video_loading">Loading…</string>
    <string name="video_speed_unit_second">S</string>
    <string name="buffering">Loading…</string>

    <string name="mp_unknown_artist">Unknow Artist</string>
    <string name="mp_unknown_album">Unknow Album</string>
    <string name="mp_cant_find_lyrics">the lrc can\'t be found</string>
    <string name="mp_lyrics_tips">***&#160;&#160;&#160;the lrc come from internet，just be reference&#160;&#160;&#160;***</string>

    <!--<string name="app_name">eHomeMediaCenter</string>-->
    <string name="device_name">eHomeMediaCenter</string>
    <string name="dialog_waiting">Waiting</string>
    <string name="dialog_prompt">Prompting</string>
    <string name="dialog_operate">Operate</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_search_msg">Device has not found，retry?</string>
    <string name="toast_disconn_service">It has not bind to service. </string>
    <string name="dialog_searching_msg">Searching device...</string>
    <string name="dialog_openning_msg">Opening…</string>
    <string name="btn_refresh">Refresh</string>
    <string name="no_such_app">No application can open this file!</string>
    <string name="dialog_wlan_fail">Network Settings</string>
    <string name="dialog_wlan_msg">Start DLNA need to open WLAN, confirm to open?</string>
    
    <!-- Home -->
    <string name="main_logo_name">eHomeMediaCenter</string>
    <string name="main_copyright">Copyright © 2018 - 2020 www.basicgo.net. All Rights Reserved.</string>
    <string name="main_supportinfo">Technical support: alex@blueberry-tek.com www.basicgo.net</string>
    <string name="main_dms_initing">Media device is initializing, please waiting ...</string>
    
    <!-- Digital Media Download/Uploader -->
    <string name="dmd_key_ok">Selected</string>
    <string name="dmd_key_clear">Clear transfer items</string>
    <string name="dmd_clear_transfer_msg">Are you sure to clear transfer item?</string>
    <string name="dmd_clear_transfer_all">Clear All</string>
    <string name="dmd_clear_transfer_succ">Clear Completed</string>
    <string name="dmd_file_not_exitsted">File does not exist</string>
    <string name="dmu_device_selector_title">Upload to</string>
    
    <!-- Digital Media Player -->
    <string name="dmp_title">Media Player</string>
    <string name="dmp_device_item_desc"> Files</string>
    <string name="dmp_media_playing">…</string>
    <string name="dmp_back_last_dir">...</string>
    <string name="dmp_media_device">Media Devices</string>
    <string name="dmp_key_direction">Select</string>
    <string name="dmp_key_ok">Selected/Play</string>
    <string name="dmp_key_download">Upload/Download the selected file</string>
    <string name="dmp_key_back">Back</string>
    <string name="dmp_btn_transfer">Transfer List</string>
    <string name="dmp_transfer_list">Transfer List</string>
    <string name="dmp_transfer_list_title">Title</string>
    <string name="dmp_transfer_list_src">Source Location</string>
    <string name="dmp_transfer_list_dest">Destination Location</string>
    <string name="dmp_transfer_list_status">Status</string>
    <string name="dmp_transfer_dialog_title">Title: &#160;</string>
    <string name="dmp_transfer_dialog_filesize">File Size: &#160;</string>
    <string name="dmp_transfer_dialog_src">Source Location: &#160;</string>
    <string name="dmp_transfer_dialog_dest">Destination Location: &#160;</string>
    <string name="dmp_transfer_dialog_btn_play">Play</string>
    <string name="dmp_transfer_dialog_btn_retry">Retry</string>
    <string name="dmp_transfer_dialog_btn_stop">Stop</string>
    <string name="dmp_transfer_dialog_btn_delete">Clear</string>
    <string name="dmp_transfer_btn_delete">Delete all</string>
    <string name="dmp_transfer_btn_delete_succ">Delete successfully items</string>
    <string name="dmp_transfer_status_waiting">Waiting</string>
    <string name="dmp_transfer_status_succ">Completed</string>
    <string name="dmp_transfer_status_fail">Failed</string>
    <string name="dmp_request_fail">Media list request failure</string>
    <string name="dmp_see_all_transfer">View transferring</string>
    <string name="dmp_transfer_file_msg">Whether to transfer the file <xliff:g id="dd">%s</xliff:g></string>
    <string name="dmp_download_file_msg">Whether to download the file <xliff:g id="dd">%s</xliff:g></string>
    <string name="dmp_upload_file_msg">Whether to upload the file <xliff:g id="dd">%s</xliff:g></string>
    <string name="dmp_download_add_item">Has been added to the transfer list</string>
    <string name="dmp_download_add_item_fail">It can not add to the transfer list</string>
    <string name="dmp_media_item_null">Invalid resource</string>
    <string name="dmp_local_media_center">My Device</string>
    <string name="dmp_local_device"><xliff:g>%s</xliff:g>(Local)</string>
    <string name="dmp_invalid_device">Current device has already expired</string>
    <string name="settings_airplaymirror_fullscreen">Screen mirror full screen</string>
    <string name="settings_airplay_forcemirroring">Airplay force mirroring</string>

    <!-- Digital Media Server -->
    <string name="dms_title">Media Server</string>
    <string name="dms_device_share">Local Sharing</string>
    <string name="dms_open_share">Start Share</string>
    <string name="dms_close_share">Stop Share</string>
    <string name="dms_set_share">Add Share</string>
    <string name="dms_set_share_mediastore">Set local media store to share</string>
    <string name="dms_set_share_folder">Add a directory to share</string>
    <string name="dms_add_share_folder">Add sharing</string>
    <string name="dms_key_del_share">Delete shared directory</string>
    <string name="dms_key_enter_folder">Enter selected directory</string>
    <string name="dms_key_set_folder">Set shared directory</string>
    <string name="dms_image">My Pictures</string>
    <string name="dms_audio">My Musics</string>
    <string name="dms_video">My Videos</string>
    <string name="dms_device_storage">Local Storage Devices</string>
    <string name="dms_sdcard_storage">SD Card</string>
    <string name="dms_flash_storage">Flash</string>
    <string name="dms_usb_storage">USB</string>
    <string name="dms_share_enabled">Share enabled</string>
    <string name="dms_share_disabled">Share disabled</string>
    <string name="dms_share_enable_msg">Share enabling…</string>
    <string name="dms_share_disable_msg">Share disabling…</string>
    <string name="dms_remove_mediastore">Determine to remove shared media store?</string>
    <string name="dms_remove_directory">Determine to remove <xliff:g id="dd">%s</xliff:g> folder sharing?</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_name">Set the name of the local media sharing</string>
    <string name="settings_upload">Allows media files to be uploaded to local device</string>
    <string name="settings_upload_allow">Allow upload</string>
    <string name="settings_upload_reject">Reject upload</string>
    <string name="settings_auto_start">Start automatically as the playback device</string>
    <string name="settings_auto_yes">Run automatically</string>
    <string name="settings_auto_no">Does not run automatically</string>
    <string name="settings_key_ok">Change option</string>
    <string name="settings_upload_location">Remote media files upload location</string>
    <string name="settings_version">Version information</string>
    <string name="settings_dmr">As a remote media playback device</string>
    <string name="settings_dmr_opening">Opening…</string>
    <string name="settings_dmr_opened">Opened</string>
    <string name="settings_dmr_closed">Closed</string>
    <string name="settings_dmr_closing">Closing…</string>
    
    <!-- Plugins Picture Player -->
    <string name="plug_image_first_img">It is already the first picture</string>
    <string name="plug_image_last_img">It is already the last picture</string>
    <string name="plug_image_slide">Start Play</string>
    <string name="plug_image_stop_slide">Stop Play</string>
    <string name="plug_image_app_name">Picture Viewer</string>
    
    <!-- Plugins Music Player -->
    <string name="plug_music_loading">Connecting to <xliff:g id="HOST">%s</xliff:g></string>
    <string name="plug_music_playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="plug_music_app_name">Music Player</string>
    
    <!-- Plugins Video Player -->
    <string name="plug_video_loading">Loading…</string>
    <string name="plug_video_waiting">Waiting</string>
    <string name="plug_video_err_unknown">Sorry, this video cannot be played.</string>
    <string name="plug_video_err_title">Cannot play video.</string>
    <string name="plug_video_err_unsupport">Sorry, this video is not valid for streaming to this device.</string>
    <string name="plug_video_playmode_title">Select play mode</string>
    <string name="plug_video_app_name">Video Player</string>
    <string name="plug_video_unsupport_seek">Unsupport seek</string>

    <!-- -->
    <string name="device_windows">USB transmitter</string>
    <string name="device_airplay">Airplay</string>
    <string name="device_android">ScreenGo app</string>
</resources>
