<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
	android:background="@drawable/dmp_transfer_head_bg"> 
      <TextView 
          android:text="@string/dmp_transfer_list_title" 
          android:layout_width="0dip"
          android:layout_height="wrap_content" 
          android:layout_weight="4"
          android:layout_gravity="center_vertical"
          android:textColor="@android:color/white"
          android:singleLine="true"
          android:lines="1"
          /> 
      <View style="@style/list_item_cell_seperator_layout"/> 
      <TextView 
          android:text="@string/dmp_transfer_list_src" 
          android:layout_width="0dip"
          android:layout_height="wrap_content" 
          android:layout_weight="2.2"
          android:layout_gravity="center"
          android:gravity="center"
          android:textColor="@android:color/white"
          android:singleLine="true"
          android:lines="1"
          /> 
      <View style="@style/list_item_cell_seperator_layout"/>
      <TextView 
          android:text="@string/dmp_transfer_list_dest" 
          android:layout_width="0dip"
          android:layout_height="wrap_content" 
          android:layout_weight="2.2"
          android:layout_gravity="center"
          android:gravity="center"
          android:textColor="@android:color/white"
          android:singleLine="true"
          android:lines="1"
          /> 
      <View style="@style/list_item_cell_seperator_layout"/>
      <TextView 
          android:text="@string/dmp_transfer_list_status" 
          android:layout_width="0dip"
          android:layout_height="wrap_content" 
          android:layout_weight="1.6"
          android:layout_gravity="center"
          android:gravity="center"
          android:textColor="@android:color/white"
          android:singleLine="true"
          android:lines="1"
          /> 
</LinearLayout> 
