<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:minHeight="56dip">
	<LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content" 
        android:layout_weight="4"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">
		<ImageView
			android:id="@+id/dmp_transfer_mime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:gravity="center_vertical"
		  	/>
	    <TextView 
	        android:id="@+id/dmp_transfer_title"
	        android:text="@string/dmp_transfer_list_title" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center_vertical"
        	android:gravity="center_vertical"
	        android:textColor="@android:color/white"
	        android:singleLine="true"
	        android:lines="1"
        	android:paddingRight="8dip"
	        />
	</LinearLayout>
    <TextView 
        android:id="@+id/dmp_transfer_src"
        android:text="@string/dmp_transfer_list_src" 
        android:layout_width="0dip"
        android:layout_height="wrap_content" 
        android:layout_weight="2.2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:lines="1"
        android:paddingRight="8dip"
        /> 
    <TextView 
        android:id="@+id/dmp_transfer_dest"
        android:text="@string/dmp_transfer_list_dest" 
        android:layout_width="0dip"
        android:layout_height="wrap_content" 
        android:layout_weight="2.2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:lines="1"
        android:paddingRight="8dip"
        /> 
    <TextView 
        android:id="@+id/dmp_transfer_status"
        android:text="@string/dmp_transfer_list_status" 
        android:layout_width="0dip"
        android:layout_height="wrap_content" 
        android:layout_weight="1.6"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:singleLine="true"
        android:lines="1"
        /> 
</LinearLayout> 
