<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:orientation="horizontal"
		android:visibility="gone">

		<Button
			android:id="@+id/btn_init"
			android:layout_width="fill_parent"
			android:layout_height="60dp"
			android:layout_weight="1"
			android:background="@drawable/selector_btn"
			android:text="START"
			android:textSize="20sp"
			android:visibility="gone" />


		<Button
			android:id="@+id/btn_reset"
			android:layout_width="fill_parent"
			android:layout_height="60dp"
			android:layout_weight="1"
			android:background="@drawable/selector_btn"
			android:text="RESTART"
			android:textSize="20sp"
			android:visibility="gone" />


		<Button
			android:id="@+id/btn_exit"
			android:layout_width="fill_parent"
			android:layout_height="60dp"
			android:layout_weight="1"
			android:background="@drawable/selector_btn"
			android:text="STOP"
			android:textSize="20sp"
			android:visibility="gone" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="5dp"
		android:layout_marginRight="10dp"
		android:orientation="horizontal"
		android:visibility="gone">

		<Button
			android:id="@+id/bt_dev_name"
			android:layout_width="120dp"
			android:layout_height="60dp"
			android:background="@drawable/selector_btn"
			android:text="DEV_NAME:"
			android:textColor="#000000"
			android:textSize="18sp"
			android:visibility="gone" />

		<EditText
			android:id="@+id/et_dev_name"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_marginLeft="10dp"
			android:layout_weight="1"
			android:background="@drawable/selector_edit"
			android:paddingLeft="28dp"
			android:visibility="gone"></EditText>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:visibility="gone">
	<CheckBox
		android:id="@+id/checkbox1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="50dp"
		android:checked="false"
		android:text="@string/settings_auto_start" />

	<CheckBox
		android:id="@+id/checkbox2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="50dp"
		android:checked="false"
		android:text="@string/settings_airplaymirror_fullscreen" />

	<CheckBox
		android:id="@+id/checkbox3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="50dp"
		android:checked="false"
		android:text="@string/settings_airplay_forcemirroring"
		android:visibility="gone"/>
	</LinearLayout>

	<RelativeLayout
		android:id="@+id/device_info_bg"
		android:layout_above="@+id/device_info"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingRight="@dimen/head_btn_pleft"
		android:background="@drawable/screengo_1">

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_alignParentBottom="true">

			<ImageView
				android:id="@+id/screengo_img_qr"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<TextView
				android:id="@+id/screengo_name_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/screengo_img_qr"
				android:layout_centerHorizontal="true"
				android:text="@string/device_android"
				android:textColor="@color/white"
				android:textSize="20sp" />
		</RelativeLayout>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/device_info"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@color/white">

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true">
			<TextView
				android:id="@+id/tv_dev_info"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:textColor="@color/black"
				android:textSize="22sp" />
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignLeft="@+id/tv_dev_info"
				android:layout_below="@+id/tv_dev_info">

				<TextView
					android:id="@+id/version_info"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/settings_version"
					android:textColor="@color/black"
					android:textSize="18sp" />

				<TextView
					android:id="@+id/version_info_v"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toRightOf="@+id/version_info"
					android:paddingLeft="@dimen/padding_left"
					android:text="@string/app_name"
					android:textColor="@color/black"
					android:textSize="18sp" />
			</RelativeLayout>
		</RelativeLayout>
	</RelativeLayout>
</RelativeLayout>