<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dmp_background"
    android:paddingLeft="@dimen/padding_left"
    android:paddingRight="@dimen/padding_right">
    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="@dimen/head_height">
	    <ImageView
	    	android:id="@+id/dms_img_logo"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/dms_logo"
	    	android:layout_centerVertical="true"
    		android:paddingLeft="@dimen/head_padding_left"/>
	    <TextView 
	    	android:id="@+id/dms_tv_title"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/dms_title"
	    	android:textSize="@dimen/head_title_size"
	    	android:textColor="@android:color/white"
	    	android:layout_centerVertical="true"
	    	android:layout_toRightOf="@id/dms_img_logo"
    		android:paddingLeft="@dimen/head_padding_left"/>
	    <Button
	        android:id="@+id/dms_set_share"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/dms_set_share"
	    	android:gravity="center"
	    	android:text="@string/dms_set_share"
	    	android:textSize="@dimen/head_btn_size"
	    	android:layout_alignParentRight="true"
	    	android:layout_centerVertical="true"
	    	android:paddingLeft="@dimen/head_btn_pleft"
	    	android:layout_marginLeft="@dimen/head_btn_margin"
	    	android:textColor="@drawable/head_btn_color"
	    	android:nextFocusDown="@+id/dms_gv_media_list"/>
	    <Button
	        android:id="@+id/dms_switch_share"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/dms_switch_share"
	    	android:gravity="center"
	    	android:text="@string/dms_open_share"
	    	android:textSize="@dimen/head_btn_size"
	    	android:layout_toLeftOf="@id/dms_set_share"
	    	android:layout_centerVertical="true"
	    	android:paddingLeft="@dimen/head_btn_pleft"
	    	android:textColor="@drawable/head_btn_color"
	    	android:nextFocusDown="@+id/dms_gv_media_list"/>
	</RelativeLayout>
	<HorizontalScrollView 
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/dmp_path"
	    	android:gravity="center_vertical"
	    	android:layout_gravity="center_vertical"
	    	android:scrollbars="none">
		<LinearLayout
		    android:id="@+id/dms_ll_path"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content">
	    </LinearLayout>
	</HorizontalScrollView>
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="0dip"
    	android:layout_weight="1"
    	android:layout_marginTop="@dimen/content_bg_ptop"
    	android:background="@drawable/dmp_content_bg">
    	<com.rockchip.mediacenter.plugins.widget.MediaGridView 
    		android:id="@+id/dms_gv_media_list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:listSelector="@android:color/transparent"
	        android:scrollbars="vertical"
	        android:drawSelectorOnTop="false"
	        android:verticalSpacing="@dimen/item_spacing"
	        android:horizontalSpacing="@dimen/item_spacing"
	        android:numColumns="auto_fit"
	        android:columnWidth="@dimen/item_width"
	        android:cacheColorHint="#00000000"
	        android:padding="@dimen/item_padding"
	        android:fadeScrollbars="false"/>
    </LinearLayout>
     
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:paddingTop="10dip"
    	android:paddingBottom="10dip"
    	android:gravity="center">
    	<!--
    	<TextView 
    		android:drawableLeft="@drawable/dmp_key_direction"
    		android:text="@string/dmp_key_direction"
    		style="@style/KeyPrompt"/>
    	<TextView 
    		android:drawableLeft="@drawable/dmp_key_ok"
    		android:text="@string/dmp_key_ok"
    		style="@style/KeyPrompt"/>
    	<TextView 
    		android:drawableLeft="@drawable/dmp_key_operate"
    		android:text="@string/dms_key_del_share"
    		style="@style/KeyPrompt"/>
    	<TextView 
    		android:drawableLeft="@drawable/dmp_key_back"
    		android:text="@string/dmp_key_back"
    		style="@style/KeyPrompt"/>
    	-->
    </LinearLayout>
     
</LinearLayout>
